added profile dropdown on desktop

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -24,6 +24,13 @@
             <div class="nav-bar">
                 <div class="desktop-navContent">
                     <a href="index.html">Home</a>
+                    <div class="projects-container">
+                        <a>Projects</a>
+                        <div class="projects-dropdown">
+                            <a>Create New Project</a>
+                            <a>Current/Past Projects</a>
+                        </div>
+                    </div>
                     <a href="announcements.html">Announcements</a>
                     <a href="about.html">About</a>
                     <a href="login.html" class="active">Login</a>
