--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -33,21 +33,27 @@
                     </div>
                     <a href="announcements.html">Announcements</a>
                     <a href="about.html">About</a>
-                    <a href="login.html" class="active">Login</a>
+                    <div class="desktop-user hide" id="user-not-logged-in">
+                        <a href="login.html" id="login">Login</a>
+                    </div>
+                    <div class="desktop-user" id="user-logged-in">
+                        <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
+                        <div class="user-content">
+                            <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
+                            <a href="#">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
+                            <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
-                    <!-- <img src="../images/menu.webp" alt="mobile navigation icon"> -->
                     <div class="menu-icon-wrapper">
                         <div id="menu-bar-1" class="menu-bar"></div>
                         <div id="menu-bar-2" class="menu-bar"></div>
                         <div id="menu-bar-3" class="menu-bar"></div>
                     </div>
                 </div>
-                <div class="user" id="user" onclick="userClick()">
+                <div class="user" id="user">
                     <!-- <img src="../images/dragon/dragon-0.webp" alt="user profile picture"> -->
-                        <!-- <span class="fa fa-sign-in" id="sign-in"
-                            style="font-size: 50px; color: var(--accent-3); z-index: 2; cursor: pointer;">
-                        </span> -->
                     <a href="login.html"><h2>Login</h2></a>
                 </div>
             </div>
@@ -72,7 +78,7 @@
         </nav>
     </header>
     <div class="container">
-        <div class="not-logged-in" id="not-logged-in">
+        <div class="not-logged-in hide" id="not-logged-in">
             <p>Psst, hey you. 
             <br>
             If you already have an account just click the Login link above. 
