started new project creation page

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -27,7 +27,7 @@
                     <div class="projects-container">
                         <a>Projects</a>
                         <div class="projects-dropdown">
-                            <a>Create New Project</a>
+                            <a href="newProject.html">Create New Project</a>
                             <a>Current/Past Projects</a>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="navContent">
                     <a href="index.html">Home</a>
                     <div class="projects">
-                        <a href="new-project.html">New Project</a>
+                        <a href="newProject.html">New Project</a>
                         <a href="projects.html">Projects</a>
                     </div>
                     <a href="announcements.html">Announcements</a>
