more work on new project and took EWG out of title head

--- a/mobile-friendly/about.html
+++ b/mobile-friendly/about.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="The official website for the Elsewhere Writers Guild, an alternative option to NaNoWriMo."> 
     <meta property="og:image" content="http://www.elsewherewriters.com/images/comp-cat-beta.webp"> 
     <meta property="og:url" content="http://www.elsewherewriters.com/index">
-    <title>EWG About</title>
+    <title>About</title>
     <link rel="stylesheet" href="mf-css/style.css">
     <link rel="stylesheet" href="mf-css/about.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
