--- a/mobile-friendly/newProject.html
+++ b/mobile-friendly/newProject.html
@@ -7,12 +7,13 @@
     <meta property="og:description" content="The official website for the Elsewhere Writers Guild, an alternative option to NaNoWriMo."> 
     <meta property="og:image" content="http://www.elsewherewriters.com/images/comp-cat-beta.webp"> 
     <meta property="og:url" content="http://www.elsewherewriters.com/index">
-    <title>EWG New Project</title>
+    <title>New Project</title>
     <link rel="stylesheet" href="mf-css/style.css">
     <link rel="stylesheet" href="mf-css/newProject.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
     <script src="js/scripts.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -79,12 +80,14 @@
     <div class="new-project-wrapper">
         <h1>Create a New Project</h1>
         <div class="new-project-container">
-            <form method="post" action=""></form>
+            <form method="post" action="">
                 <div class="input-section">
                     <label for="title">Title</label>
-                    <input required type="text" name="title" id="title">
+                    <input type="text" name="title" id="title"
+                        placeholder="Awesome Title">
                     <label for="genre">Genre</label>
-                    <select required name="genre" id="genre">
+                    <select name="genre" id="genre">
+                        <option name="placeholder" id="placeholder" value="0">Choose your genre</option>
                         <option name="adventure" id="adventure" value="1">Adventure</option>
                         <option name="erotica" id="erotica" value="2">Erotica</option>
                         <option name="fanfiction" id="fanfiction" value="3">Fanfiction</option>
@@ -105,19 +108,25 @@
                         <option name="ya" id="ya" value="18">Young Adult</option>
                         <option name="childrens" id="childrens" value="19">Young Readers</option>
                     </select>
-                    <label for="goalNumber">Goal Number</label>
-                    <input required type="text" name="goalNumber" id="goalNumber" pattern="^\d+(,\d+)?$">
-                    <label for="endDate">End Date</label>
-                    <input type="date" name="endDate" id="endDate">
-                    <label for="noEndDate">Check the box if you don't want to set an end date</label>
-                    <input type="checkbox" name="noEndDate" id="noEndDate">
+                    <label for="goal">Goal Number</label>
+                    <input type="text" name="goal" id="goal" pattern="^\d+(,\d+)?$"
+                        placeholder="50,000">
+                    <label for="goal_date">End Date</label>
+                    <input type="date" name="goal_date" id="goal_date" onchange="findDailyGoal()">
+                        <div class="checkbox-wrapper">
+                            <label for="noEndDate">Check this box if you don't<br>want to set an end date</label>
+                            <input type="checkbox" name="noEndDate" id="noEndDate">
+                        </div>
                     <label for="dailyGoal">Daily Goal</label>
-                    <input type="number" name="dailyGoal" id="dailyGoal">
+                    <input type="text" name="dailyGoal" id="dailyGoal" pattern="^\d+(,\d+)?$"
+                        placeholder="100">
+                        <span id="recommend"></span>
                     <label for="summary">Summary</label>
-                    <textarea name="summary" id="summary"></textarea>
+                    <textarea name="summary" id="summary" maxlength="750"
+                        placeholder="Tell the world about your awesome project (max: 750 characters)"></textarea>
                 </div>
                 <div class="preview-section">
-
+                    <h1>Preview Your Future Masterpiece</h1>
                 </div>
                 <div class="submit">
 
