more work on new project

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -123,7 +123,7 @@
                     <h1>Your Current Project</h1>
                 </div>
                 <div id="project-img">
-                    <img src="../images/genre-covers/placeholder.webp" id="theme-img">
+                    <img src="../images/genre-covers/placeholder(v3).webp" id="theme-img">
                 </div>
                 <div id="project-title">
                     <h2>Title</h2>
