--- a/mobile-friendly/newProject.html
+++ b/mobile-friendly/newProject.html
@@ -127,6 +127,9 @@
                 </div>
                 <div class="preview-section">
                     <h1>Preview Your Future Masterpiece</h1>
+                    <img class="preview-image" id="preview-image" src="../images/genre-covers/placeholder(v3).webp">
+                    <h2 id="preview-title">Title</h2>
+
                 </div>
                 <div class="submit">
 
