adding preview to mobile bc I'm baka and didn't start with it

--- a/mobile-friendly/newProject.html
+++ b/mobile-friendly/newProject.html
@@ -126,10 +126,25 @@
                         placeholder="Tell the world about your awesome project (max: 750 characters)"></textarea>
                 </div>
                 <div class="preview-section">
-                    <h1>Preview Your Future Masterpiece</h1>
+                    <h1>Preview</h1>
                     <img class="preview-image" id="preview-image" src="../images/genre-covers/placeholder(v3).webp">
-                    <h2 id="preview-title">Title</h2>
-
+                    <h2 id="preview-title">The Adventures of Huckleberry Finn</h2>
+                    <div class="grid-item">
+                        <h3>Total :</h3>
+                        <span id="preview-goal">50,000</span>
+                    </div>
+                    <div class="grid-item">
+                        <h3>Due on:</h3>
+                        <span id="preview-date">5/25/25</span>
+                    </div>
+                    <div class="grid-item">
+                        <h3>Daily Average:</h3>
+                        <span id="preview-daily">250</span>
+                    </div>
+                    <div class="grid-item">
+                        <h3>Summary:</h3>
+                        <span id="preview-summary">It was a long and windy road he found himself upon.</span>
+                    </div>
                 </div>
                 <div class="submit">
 
