--- a/mobile-friendly/newProject.html
+++ b/mobile-friendly/newProject.html
@@ -83,10 +83,10 @@
             <form method="post" action="">
                 <div class="input-section">
                     <label for="title">Title</label>
-                    <input type="text" name="title" id="title"
+                    <input class="input" type="text" name="title" id="title"
                         placeholder="Awesome Title">
                     <label for="genre">Genre</label>
-                    <select name="genre" id="genre">
+                    <select class="input" name="genre" id="genre">
                         <option name="placeholder" id="placeholder" value="0">Choose your genre</option>
                         <option name="adventure" id="adventure" value="1">Adventure</option>
                         <option name="erotica" id="erotica" value="2">Erotica</option>
@@ -109,20 +109,20 @@
                         <option name="childrens" id="childrens" value="19">Young Readers</option>
                     </select>
                     <label for="goalNumber">Goal Number</label>
-                    <input type="text" name="goalNumber" id="goalNumber" pattern="^\d+(,\d+)?$"
+                    <input class="input" type="text" name="goalNumber" id="goalNumber" pattern="^\d+(,\d+)?$"
                         placeholder="50,000">
                     <label for="endDate">End Date</label>
-                    <input type="date" name="endDate" id="endDate">
+                    <input class="input" type="date" name="endDate" id="endDate">
                         <div class="checkbox-wrapper">
                             <label class="noEndDate" for="noEndDate">Check this box if you don't want to set an end date</label>
-                            <input type="checkbox" name="noEndDate" id="noEndDate">
+                            <input class="input" type="checkbox" name="noEndDate" id="noEndDate">
                         </div>
                     <label for="dailyGoal">Daily Goal</label>
-                    <input type="text" name="dailyGoal" id="dailyGoal" pattern="^\d+(,\d+)?$"
+                    <input class="input" type="text" name="dailyGoal" id="dailyGoal" pattern="^\d+(,\d+)?$"
                         placeholder="100">
                         <span id="recommend"></span>
                     <label class="summary" for="summary">Summary</label>
-                    <textarea class="summary" name="summary" id="summary" maxlength="750"
+                    <textarea class="summary input" name="summary" id="summary" maxlength="750"
                         placeholder="Tell the world about your awesome project (max: 750 characters)"></textarea>
                 </div>
                 <div class="preview-section">
@@ -138,7 +138,7 @@
                         <span id="preview-date">5/25/25</span>
                     </div>
                     <div class="grid-item">
-                        <h3>Daily Average:</h3>
+                        <h3>Average:</h3>
                         <span id="preview-daily">250</span>
                     </div>
                     <div class="grid-item">
@@ -146,8 +146,8 @@
                         <span id="preview-summary">It was a long and windy road he found himself upon.</span>
                     </div>
                 </div>
-                <div class="submit">
-
+                <div class="button">
+                    <input type="submit" value="Looks Good" id="submit">
                 </div>
             </form>
         </div>
