added a note that daily goal can be left blank in it's placeholder

--- a/mobile-friendly/newProject.html
+++ b/mobile-friendly/newProject.html
@@ -122,7 +122,7 @@
                         </div>
                     <label for="dailyGoal">Daily Goal</label>
                     <input class="input" type="text" name="dailyGoal" id="dailyGoal" pattern="^\d+(,\d+)?$"
-                        placeholder="100">
+                        placeholder="100 (you can leave me blank)">
                         <span id="recommend"></span>
                     <label class="summary" for="summary">Summary</label>
                     <textarea class="summary input" name="summary" id="summary" maxlength="750"
