finished appearance settings contents

--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -84,10 +84,19 @@
                 <div class="appearance-contents">
                     <div class="pfp-change-wrapper">
                         <img id="change-pfp-image" src="../images/pfp-icon.webp">
-                        <button></button>
+                        <button>Update Profile Picture</button>
                     </div>
                     <div class="theme-change-wrapper">
-                        
+                        <div class="theme-change-button">
+                            <a>Set Theme</a>
+                            <div class="theme-change-dropdown" id="theme-change-dropdown">
+                                <p class="setTheme" onclick="setTheme('dark1')">Dark-1</p>
+                                <p class="setTheme" onclick="setTheme('dark2')">Dark-2</p>
+                                <p class="setTheme" onclick="setTheme('dark3')">Dark-3</p>
+                                <p class="setTheme" onclick="setTheme('light1')">Light-1</p>
+                                <p class="setTheme" onclick="setTheme('light2')">Light-2</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
