adjusted buttons a smidge

--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -24,9 +24,10 @@
                 Are you <strong>certain</strong> you want to delete your account?</p>
             </div>
             <div class="button-wrapper-warning">
-                <div id="hide-warning" onclick="hideWarning()">Back to Safety</div>
                 <div class="delete">
-                    <a id="delete">Delete My Account</a></div>
+                    <a id="delete">Delete My Account</a>
+                </div>
+                <div id="hide-warning" onclick="hideWarning()">Back to Safety</div>
             </div>
         </div>
     </div>
