adding in extra dark theme

--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -106,6 +106,7 @@
                         <div class="theme-change-button">
                             <a>Set Theme</a>
                             <div class="theme-change-dropdown" id="theme-change-dropdown">
+                                <p class="setTheme" onclick="setTheme('dark0')">Dark-0</p>
                                 <p class="setTheme" onclick="setTheme('dark1')">Dark-1</p>
                                 <p class="setTheme" onclick="setTheme('dark2')">Dark-2</p>
                                 <p class="setTheme" onclick="setTheme('dark3')">Dark-3</p>
