finish desktop layout and fixed nav dropdowns not showing up

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -40,7 +40,7 @@
                         <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
                         <div class="user-content">
                             <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
-                            <a href="#">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
+                            <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
                             <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
             <div class="userDropdown slide-left" id="userDropdown">
                 <div class="userContent">
                     <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
-                    <a href="#">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
+                    <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
                     <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                 </div>
             </div>
