added another badge to the index page to fill the gap and moved the user dropdown left so it lines up better with it's parent div

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -152,6 +152,7 @@
             <img src="../images/badges/streak-fourteen-mono.webp" id="streak-fourteen" class="badge pulse">
             <img src="../images/badges/streak-twentyOne-mono.webp" id="streak-twentyOne" class="badge pulse">
             <img src="../images/badges/every-streak-mono.webp" id="every-streak" class="badge pulse">
+            <img src="../images/badges/back-it-up-mono.webp" id="back-it-up" class="badge pulse">
         </div>
     </div>
     <footer id="footer">
