--- a/mobile-friendly/newProject.html
+++ b/mobile-friendly/newProject.html
@@ -27,8 +27,8 @@
                     <div class="projects-container">
                         <a>Projects</a>
                         <div class="projects-dropdown">
-                            <a>Create New Project</a>
-                            <a>Current/Past Projects</a>
+                            <a href="newProject.html">Create New Project</a>
+                            <a href="projects.html">Current/Past Projects</a>
                         </div>
                     </div>
                     <a href="announcements.html">Announcements</a>
@@ -40,7 +40,7 @@
                         <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
                         <div class="user-content">
                             <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
-                            <a href="#">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
+                            <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
                             <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="navContent">
                     <a href="index.html">Home</a>
                     <div class="projects">
-                        <a href="new-project.html">New Project</a>
+                        <a href="newProject.html">New Project</a>
                         <a href="projects.html">Projects</a>
                     </div>
                     <a href="announcements.html">Announcements</a>
@@ -71,7 +71,7 @@
             <div class="userDropdown slide-left" id="userDropdown">
                 <div class="userContent">
                     <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
-                    <a href="#">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
+                    <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
                     <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                 </div>
             </div>
