--- a/mobile-friendly/projects.html
+++ b/mobile-friendly/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,10 @@
     <meta property="og:description" content="The official website for the Elsewhere Writers Guild, an alternative option to NaNoWriMo."> 
     <meta property="og:image" content="http://www.elsewherewriters.com/images/comp-cat-beta.webp"> 
     <meta property="og:url" content="http://www.elsewherewriters.com/index">
-    <title>About</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="mf-css/style.css">
-    <link rel="stylesheet" href="mf-css/about.css">
+    <link rel="stylesheet" href="mf-css/projects.css">
+    <link rel="stylesheet" href="mf-css/progressBar.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
     <script src="js/scripts.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -76,23 +77,5 @@
             </div>
         </nav>
     </header>
-    <div class="about-wrapper">
-        <div class="about-container">
-            <h1>Welcome to the Elsewhere Writers Guild</h1>
-            <div class="about-content">
-                <p>Whether you're new to writing or you've written a thousand stories, you're always welcome in the guild.</p>
-                <p>Here we share our progress, encourage and uplift each other, or just take solace in the fact that we're not suffering the process of writing alone.</p>
-                <p>We weird. We write. We unite to fight the plots in our heads and torment our characters.</p>
-            </div>
-            <div class="elmo">
-                <img src="../images/gifs/burn-elmo.gif">
-            </div>
-        </div>
-    </div>
-    <footer id="footer">
-        <p id="copyright">&copy;2025. All rights reserved.</p>
-        <p id="logo-link">Logo by <a href="https://kohacu.com/20181205post-22321/">Kohaku!</a></p>
-        <p id="contact"><a href="contact.php">Contact Us</a></p>
-    </footer>
 </body>
 </html>
