--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -43,7 +43,7 @@
                         <a>Projects</a>
                         <div class="projects-dropdown">
                             <a href="newProject.html">Create New Project</a>
-                            <a>Current/Past Projects</a>
+                            <a href="projects.html">Current/Past Projects</a>
                         </div>
                     </div>
                     <a href="announcements.html">Announcements</a>
