user pfp instead of login link

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -53,8 +53,8 @@
                     </div>
                 </div>
                 <div class="user" id="user">
-                    <!-- <img src="../images/dragon/dragon-0.webp" alt="user profile picture"> -->
-                    <a href="login.html"><h2>Login</h2></a>
+                    <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
+                    <!-- <a href="login.html"><h2>Login</h2></a> -->
                 </div>
             </div>
             <div class="navMenu slide-right close" id="navMenu">
