--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="mf-css/progressBar.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
     <script src="js/scripts.js"></script>
+    <script src="https://kit.fontawesome.com/ea9288eda1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -53,28 +54,38 @@
                     </div>
                 </div>
                 <div class="user" id="user">
-                    <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
+                    <a href="#"><img src="../images/dragon/dragon-0.webp" alt="user profile picture"></a>
                     <!-- <a href="login.html"><h2>Login</h2></a> -->
                 </div>
             </div>
             <div class="navMenu slide-right close" id="navMenu">
                 <div class="navContent">
-                    <a href="index.html">Home</a>
+                    <a href="index.html">Home 
+                        <i class="fa fa-home" id="home-icon" alt="home icon"></i></a>
+                    <!-- <a href="#" id="profile-link">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a> -->
                     <div class="projects">
-                        <a href="newProject.html">New Project</a>
-                        <a href="projects.html">Projects</a>
+                        <a href="newProject.html">New Project 
+                            <i class="fa fa-plus" id="new-project-icon" alt="plus symbol icon"></i></a>
+                        <a href="projects.html">Projects 
+                            <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
                     </div>
-                    <a href="announcements.html">Announcements</a>
-                    <a href="about.html">About</a>
+                    <a href="announcements.html">Announcements 
+                        <i class="fa fa-bullhorn" id="announcements-icon" alt="megaphone icon"></i></a>
+                    <a href="about.html">About 
+                        <i class="fa-solid fa-circle-question" id="about-icon" alt="question mark icon"></i></a>
+                    <a href="settings.html">Settings 
+                        <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
+                    <a href="#" id="login-link">Logout 
+                        <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                 </div>
             </div>
-            <div class="userDropdown slide-left" id="userDropdown">
+            <!-- <div class="userDropdown slide-left" id="userDropdown">
                 <div class="userContent">
-                    <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
+                    <a href="#" id="profile-link">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
                     <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
-                    <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
+                    <a href="#" id="login-link">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                 </div>
-            </div>
+            </div> -->
         </nav>
     </header>
     <div class="container">
