changed announcements to news

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -32,7 +32,7 @@
                             <a href="projects.html">Current/Past Projects</a>
                         </div>
                     </div>
-                    <a href="announcements.html">Announcements</a>
+                    <a href="announcements.html">News</a>
                     <a href="about.html">About</a>
                     <div class="desktop-user hide" id="user-not-logged-in">
                         <a href="login.html" id="login">Login</a>
@@ -69,7 +69,7 @@
                         <a href="projects.html">Projects 
                             <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
                     </div>
-                    <a href="announcements.html">Announcements 
+                    <a href="announcements.html">News
                         <i class="fa fa-bullhorn" id="announcements-icon" alt="megaphone icon"></i></a>
                     <a href="about.html">About 
                         <i class="fa-solid fa-circle-question" id="about-icon" alt="question mark icon"></i></a>
