--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="mf-css/progressBar.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
     <script src="js/scripts.js"></script>
-    <script src="https://kit.fontawesome.com/ea9288eda1.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/ea9288eda1.js" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -72,7 +72,7 @@
                     <a href="announcements.html">News
                         <i class="fa fa-bullhorn" id="announcements-icon" alt="megaphone icon"></i></a>
                     <a href="about.html">About 
-                        <i class="fa-solid fa-circle-question" id="about-icon" alt="question mark icon"></i></a>
+                        <i class="fa fa-question" id="about-icon" alt="question mark icon"></i></a>
                     <a href="settings.html">Settings 
                         <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
                     <a href="#" id="login-link">Logout 
