added new and improved mobile nav to all pages

--- a/mobile-friendly/projects.html
+++ b/mobile-friendly/projects.html
@@ -31,7 +31,7 @@
                             <a href="projects.html">Current/Past Projects</a>
                         </div>
                     </div>
-                    <a href="announcements.html">Announcements</a>
+                    <a href="announcements.html">News</a>
                     <a href="about.html">About</a>
                     <div class="desktop-user hide" id="user-not-logged-in">
                         <a href="login.html" id="login">Login</a>
@@ -53,26 +53,29 @@
                     </div>
                 </div>
                 <div class="user" id="user">
-                    <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
+                    <a href="#"><img src="../images/dragon/dragon-0.webp" alt="user profile picture"></a>
                     <!-- <a href="login.html"><h2>Login</h2></a> -->
                 </div>
             </div>
             <div class="navMenu slide-right close" id="navMenu">
                 <div class="navContent">
-                    <a href="index.html">Home</a>
+                    <a href="index.html">Home 
+                        <i class="fa fa-home" id="home-icon" alt="home icon"></i></a>
+                    <!-- <a href="#" id="profile-link">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a> -->
                     <div class="projects">
-                        <a href="newProject.html">New Project</a>
-                        <a href="projects.html">Projects</a>
+                        <a href="newProject.html">New Project 
+                            <i class="fa fa-plus" id="new-project-icon" alt="plus symbol icon"></i></a>
+                        <a href="projects.html">Projects 
+                            <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
                     </div>
-                    <a href="announcements.html">Announcements</a>
-                    <a href="about.html">About</a>
-                </div>
-            </div>
-            <div class="userDropdown slide-left" id="userDropdown">
-                <div class="userContent">
-                    <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
-                    <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
-                    <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
+                    <a href="announcements.html">News
+                        <i class="fa fa-bullhorn" id="announcements-icon" alt="megaphone icon"></i></a>
+                    <a href="about.html">About 
+                        <i class="fa fa-question" id="about-icon" alt="question mark icon"></i></a>
+                    <a href="settings.html">Settings 
+                        <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
+                    <a href="#" id="login-link">Logout 
+                        <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                 </div>
             </div>
         </nav>
